correct footer alignment issue on mobile

--- a/sass/site/footer/_footer.scss
+++ b/sass/site/footer/_footer.scss
@@ -75,3 +75,6 @@ and open the template in the editor.
     }
 }
 
+.footer-widgets {
+    text-align: left;
+}
