--- a/sass/site/hero/compass-bg.scss
+++ b/sass/site/hero/compass-bg.scss
@@ -9,17 +9,29 @@ and open the template in the editor.
 */
 
 #post-1735 {
-    position: relative;
+    padding: 2.5em 0;
+    >.entry-content {
+        position: relative;
+
+    }
+    p {
+        position: static;
+    }
     .compass-bg {
         position: absolute;
         z-index: -1;
-        bottom: -150px;
+        top: 0;
         right: -50%;
+    }
+    
+    @media #{$tablet__breakpoint} {
+        .compass-bg {
+            right: -80%;
+        }
     }
     
     @media #{$desktop__breakpoint} {
         .compass-bg {
-            //@include border(2px, blue);
             bottom: -300px;
             right: -70%;
             width: 1000px;
@@ -27,12 +39,4 @@ and open the template in the editor.
         }
     }
     
-/*    background-image: url( 'http://localhost/peak-theme/wp-content/themes/peak-theme/assets/images/compass-grey_2.png' );
-    background-repeat: no-repeat;
-    background-position: -40% -300%;*/
-    @media #{$tablet__breakpoint} {
-        //@include border;
-            /*background-position: 300% -300%;*/
-
-    }
 }
